asA